# Flust

./: .gitignore  Cargo.toml  Project_details.md  README.md  VERIFICATION_TESTS.md  my_flow.flow.json  my_flow.rs  sample_flow.yaml
flust-cli/: Cargo.toml
flust-cli/src/: main.rs
flust-codegen/: Cargo.toml
flust-codegen/src/: generator.rs  lib.rs  template_engine.rs
flust-core/: Cargo.toml
flust-core/src/: ir.rs  lib.rs  parser.rs  topological_sort.rs
flust-server/: Cargo.toml
flust-server/src/: main.rs
frontend/: package-lock.json
frontend/public/plugins/call-function/: plugin.json
frontend/public/plugins/debug/: plugin.json  template.rs
frontend/public/plugins/debug-function/: plugin.json  template.rs
frontend/public/plugins/function-code/: plugin.json  template.rs
frontend/public/plugins/function-definition/: plugin.json
frontend/public/plugins/legacy-code/: plugin.json
frontend/public/plugins/start-node/: plugin.json
frontend/src/: App.tsx  api.ts
frontend/src/components/: CustomNode.tsx  LogsPanel.tsx  PropertiesPanel.tsx  PropertyField.tsx  Sidebar.tsx  Toolbar.tsx
frontend/src/hooks/: usePlugins.ts
frontend/src/styles/: app.css  customnode.css  logs.css  properties.css  sidebar.css  toolbar.css
frontend/src/types/: plugin.ts
output_project/: Cargo.toml  chained_example  chained_example.rs  complete_example  complete_example.rs  hello_world  test_generated  test_generated.rs
output_project/src/: main.rs
