[package]
name = "flust-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.7"
flust-codegen = { version = "0.1.0", path = "../flust-codegen" }
flust-core = { version = "0.1.0", path = "../flust-core" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.7", features = ["cors"] }
tempfile = "3.8"
env_logger = "0.11"
